--- a/SCDataconversion/Common/Localization/Dorchester2/log_ftp.txt
+++ b/SCDataconversion/Common/Localization/Dorchester2/log_ftp.txt
@@ -1221,3 +1221,139 @@
 . 2014-02-28 04:28:11.362 Upload successful
 > 2014-02-28 04:28:11.362 Script: close
 . 2014-02-28 04:28:11.363 Disconnected from server
+. 2014-03-01 05:30:18.584 --------------------------------------------------------------------------
+. 2014-03-01 05:30:18.587 WinSCP Version 5.1.7 (Build 3446) (OS 6.1.7601 Service Pack 1)
+. 2014-03-01 05:30:18.588 Configuration: C:\Program Files (x86)\WinSCP\WinSCP.ini
+. 2014-03-01 05:30:18.588 Local account: RENEGADE\SQL2008User
+. 2014-03-01 05:30:18.588 Working directory: C:\Program Files (x86)\WinSCP
+. 2014-03-01 05:30:18.588 Process ID: 12780
+. 2014-03-01 05:30:18.588 Command-line: "C:\Program Files (x86)\WinSCP\WinSCP.exe" -script="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2\ValidationReport_Upload_FTP.txt" /log="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2\log_ftp.txt"
+. 2014-03-01 05:30:18.588 Time zone: Current: GMT-7, Standard: GMT-7, DST: GMT-6, DST Start: 3/9/2014, DST End: 11/2/2014
+. 2014-03-01 05:30:18.588 Login time: Saturday, March 01, 2014 5:30:18 AM
+. 2014-03-01 05:30:18.588 --------------------------------------------------------------------------
+. 2014-03-01 05:30:18.588 Session name: dorchester2@ftp.excent.com (Ad-Hoc session)
+. 2014-03-01 05:30:18.588 Host name: ftp.excent.com (Port: 21)
+. 2014-03-01 05:30:18.589 User name: dorchester2 (Password: Yes, Key file: No)
+. 2014-03-01 05:30:18.589 Tunnel: No
+. 2014-03-01 05:30:18.589 Transfer Protocol: FTP
+. 2014-03-01 05:30:18.589 Ping type: C, Ping interval: 30 sec; Timeout: 15 sec
+. 2014-03-01 05:30:18.589 Proxy: none
+. 2014-03-01 05:30:18.589 FTP: FTPS: Explicit TLS; Passive: Yes [Force IP: A]; List all: A
+. 2014-03-01 05:30:18.589 Session reuse: Yes
+. 2014-03-01 05:30:18.589 Local directory: default, Remote directory: home, Update: Yes, Cache: Yes
+. 2014-03-01 05:30:18.589 Cache directory changes: Yes, Permanent: Yes
+. 2014-03-01 05:30:18.589 DST mode: 1; Timezone offset: 0h 0m
+. 2014-03-01 05:30:18.589 --------------------------------------------------------------------------
+. 2014-03-01 05:30:18.607 Connecting to ftp.excent.com ...
+. 2014-03-01 05:30:18.698 Connected with ftp.excent.com, negotiating SSL connection...
+< 2014-03-01 05:30:18.698 220-Welcome to Excent FTP.
+< 2014-03-01 05:30:18.698 220-
+< 2014-03-01 05:30:18.699 220 We monitor connections so please, no monkey business.
+> 2014-03-01 05:30:18.699 AUTH TLS
+< 2014-03-01 05:30:18.700 234 Using authentication type TLS
+. 2014-03-01 05:30:19.007 Using TLSv1, cipher TLSv1/SSLv3: AES256-SHA, 1024 bit RSA
+. 2014-03-01 05:30:19.007 SSL connection established. Waiting for welcome message...
+> 2014-03-01 05:30:19.007 USER dorchester2
+< 2014-03-01 05:30:19.007 331 Password required for dorchester2
+> 2014-03-01 05:30:19.007 PASS *******
+< 2014-03-01 05:30:19.008 230 Logged on
+> 2014-03-01 05:30:19.008 SYST
+< 2014-03-01 05:30:19.009 215 UNIX emulated by FileZilla
+> 2014-03-01 05:30:19.009 FEAT
+< 2014-03-01 05:30:19.010 211-Features:
+< 2014-03-01 05:30:19.010  MDTM
+< 2014-03-01 05:30:19.010  REST STREAM
+< 2014-03-01 05:30:19.010  SIZE
+< 2014-03-01 05:30:19.010  MLST type*;size*;modify*;
+< 2014-03-01 05:30:19.011  MLSD
+< 2014-03-01 05:30:19.011  AUTH SSL
+< 2014-03-01 05:30:19.011  AUTH TLS
+< 2014-03-01 05:30:19.011  PROT
+< 2014-03-01 05:30:19.011  PBSZ
+< 2014-03-01 05:30:19.011  UTF8
+< 2014-03-01 05:30:19.011  CLNT
+< 2014-03-01 05:30:19.011  MFMT
+< 2014-03-01 05:30:19.015 211 End
+> 2014-03-01 05:30:19.015 PBSZ 0
+< 2014-03-01 05:30:19.015 200 PBSZ=0
+> 2014-03-01 05:30:19.015 PROT P
+< 2014-03-01 05:30:19.015 200 Protection level set to P
+. 2014-03-01 05:30:19.015 Connected
+. 2014-03-01 05:30:19.015 --------------------------------------------------------------------------
+. 2014-03-01 05:30:19.016 Using FTP protocol.
+. 2014-03-01 05:30:19.016 Doing startup conversation with host.
+> 2014-03-01 05:30:19.016 PWD
+< 2014-03-01 05:30:19.017 257 "/" is current directory.
+. 2014-03-01 05:30:19.024 Getting current directory name.
+. 2014-03-01 05:30:19.024 Startup conversation with host finished.
+< 2014-03-01 05:30:19.024 Script: Active session: [1] dorchester2@ftp.excent.com
+> 2014-03-01 05:30:19.024 Script: option transfer binary
+< 2014-03-01 05:30:19.024 Script: transfer        binary    
+> 2014-03-01 05:30:19.024 Script: lcd "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2"
+< 2014-03-01 05:30:19.025 Script: E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2
+> 2014-03-01 05:30:19.025 Script: cd /
+. 2014-03-01 05:30:19.025 Cached directory change via "/" to "/".
+. 2014-03-01 05:30:19.025 Getting current directory name.
+< 2014-03-01 05:30:19.025 Script: /
+> 2014-03-01 05:30:19.025 Script: put "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2\ValidationReport_Detail.xls"
+. 2014-03-01 05:30:19.025 Copying 1 files/directories to remote directory "/"
+. 2014-03-01 05:30:19.025   PrTime: Yes; PrRO: No; Rght: rw-r--r--; PrR: No (No); FnCs: N; RIC: 0100; Resume: S (102400); CalcS: No; Mask: 
+. 2014-03-01 05:30:19.025   TM: B; ClAr: No; CPS: 0; InclM: 
+. 2014-03-01 05:30:19.025   AscM: *.*html; *.htm; *.txt; *.php; *.php3; *.cgi; *.c; *.cpp; *.h; *.pas; *.bas; *.tex; *.pl; *.js; .htaccess; *.xtml; *.css; *.cfg; *.ini; *.sh; *.xml
+. 2014-03-01 05:30:19.025 File: "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2\ValidationReport_Detail.xls"
+. 2014-03-01 05:30:19.029 Copying "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2\ValidationReport_Detail.xls" to remote directory started.
+. 2014-03-01 05:30:19.036 Binary transfer mode selected.
+. 2014-03-01 05:30:19.036 Starting upload of E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Dorchester2\ValidationReport_Detail.xls
+> 2014-03-01 05:30:19.036 TYPE A
+< 2014-03-01 05:30:19.037 200 Type set to A
+> 2014-03-01 05:30:19.037 PASV
+< 2014-03-01 05:30:19.038 227 Entering Passive Mode (10,0,1,27,199,52)
+> 2014-03-01 05:30:19.040 MLSD
+< 2014-03-01 05:30:19.041 150 Connection accepted
+. 2014-03-01 05:30:19.041 SSL connection established
+< 2014-03-01 05:30:19.044 226 Transfer OK
+. 2014-03-01 05:30:19.044 type=file;modify=20130620205811;size=1333702; 504 Config Guide_Mar 2013_DRAFT.pdf
+. 2014-03-01 05:30:19.044 type=file;modify=20130830185417;size=548598; 8.30 504 Final Config.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20130830183005;size=263273; 8.30 Final Config.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20131108175728;size=1462; Checklist.xml
+. 2014-03-01 05:30:19.044 type=file;modify=20130913165747;size=1672; CommLog.xml
+. 2014-03-01 05:30:19.044 type=file;modify=20130913165747;size=35602; Communication Log.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20130412031609;size=7246; DD2 Logo_A.jpg
+. 2014-03-01 05:30:19.044 type=file;modify=20140108204642;size=36958; ESOL.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20130923014218;size=42518; Invitation to Meeting.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20130923014212;size=1429; InvMeet.xml
+. 2014-03-01 05:30:19.044 type=dir;modify=20140210062255; New directory
+. 2014-03-01 05:30:19.044 type=file;modify=20131108175744;size=22559; Permission for Speech-Language Screening.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20131003183438;size=40488; ReferralForDetermination.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20131101134740;size=546; SpeechPerm.xml
+. 2014-03-01 05:30:19.044 type=file;modify=20131119185442;size=36789; SST Intervention Meeting.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20131025152228;size=35089; SST Invitation to Meeting.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20140110154543;size=38773; SST Referral.docx
+. 2014-03-01 05:30:19.044 type=file;modify=20131025152224;size=1045; SSTMeet.xml
+. 2014-03-01 05:30:19.044 type=file;modify=20131119185453;size=8275; SSTMeeting.xml
+. 2014-03-01 05:30:19.044 type=file;modify=20140110154027;size=8639; SSTReferral.xml
+. 2014-03-01 05:30:19.044 type=file;modify=20131101134754;size=32930; Teacher Report Form.docx
+. 2014-03-01 05:30:19.044 type=dir;modify=20131216141014; Update
+. 2014-03-01 05:30:19.044 type=file;modify=20131031191619;size=219602; Update 10.31.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20131101000910;size=106929; Update 11.1.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20131113172543;size=72186; Update 11.12.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20131115174717;size=38368; Update 11.15a.zip
+. 2014-03-01 05:30:19.044 type=dir;modify=20131122183510; Update 11.22
+. 2014-03-01 05:30:19.044 type=file;modify=20131104134314;size=320367; Update 11.4.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20130920153824;size=851768; Update 9.20.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20130924132454;size=171329; Update 9.24.zip
+. 2014-03-01 05:30:19.044 type=file;modify=20140228112810;size=1216512; ValidationReport_Detail.xls
+. 2014-03-01 05:30:19.044 type=file;modify=20131101134740;size=333; VisScreen.xml
+> 2014-03-01 05:30:19.053 TYPE I
+< 2014-03-01 05:30:19.054 200 Type set to I
+> 2014-03-01 05:30:19.054 PASV
+< 2014-03-01 05:30:19.060 227 Entering Passive Mode (10,0,1,27,199,53)
+> 2014-03-01 05:30:19.060 STOR ValidationReport_Detail.xls
+< 2014-03-01 05:30:19.063 150 Connection accepted
+. 2014-03-01 05:30:19.066 SSL connection established
+< 2014-03-01 05:30:19.195 226 Transfer OK
+> 2014-03-01 05:30:19.195 MFMT 20140301123016 ValidationReport_Detail.xls
+< 2014-03-01 05:30:19.196 213 modify=20140301123016; /ValidationReport_Detail.xls
+. 2014-03-01 05:30:19.196 Upload successful
+> 2014-03-01 05:30:19.196 Script: close
+. 2014-03-01 05:30:19.197 Disconnected from server
