--- a/SCDataconversion/Common/Localization/Pickens/log_ftp.txt
+++ b/SCDataconversion/Common/Localization/Pickens/log_ftp.txt
@@ -315,3 +315,215 @@
 . 2014-02-28 05:12:26.498 Upload successful
 > 2014-02-28 05:12:26.498 Script: close
 . 2014-02-28 05:12:26.498 Disconnected from server
+. 2014-03-01 05:10:45.812 --------------------------------------------------------------------------
+. 2014-03-01 05:10:45.818 WinSCP Version 5.1.7 (Build 3446) (OS 6.1.7601 Service Pack 1)
+. 2014-03-01 05:10:45.818 Configuration: C:\Program Files (x86)\WinSCP\WinSCP.ini
+. 2014-03-01 05:10:45.819 Local account: RENEGADE\SQL2008User
+. 2014-03-01 05:10:45.819 Working directory: C:\Program Files (x86)\WinSCP
+. 2014-03-01 05:10:45.819 Process ID: 15816
+. 2014-03-01 05:10:45.819 Command-line: "C:\Program Files (x86)\WinSCP\WinSCP.exe" -script="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Upload_FTP.txt" /log="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\log_ftp.txt"
+. 2014-03-01 05:10:45.819 Time zone: Current: GMT-7, Standard: GMT-7, DST: GMT-6, DST Start: 3/9/2014, DST End: 11/2/2014
+. 2014-03-01 05:10:45.819 Login time: Saturday, March 01, 2014 5:10:45 AM
+. 2014-03-01 05:10:45.819 --------------------------------------------------------------------------
+. 2014-03-01 05:10:45.819 Session name: pickens@ftp.excent.com (Ad-Hoc session)
+. 2014-03-01 05:10:45.819 Host name: ftp.excent.com (Port: 21)
+. 2014-03-01 05:10:45.819 User name: pickens (Password: Yes, Key file: No)
+. 2014-03-01 05:10:45.819 Tunnel: No
+. 2014-03-01 05:10:45.819 Transfer Protocol: FTP
+. 2014-03-01 05:10:45.819 Ping type: C, Ping interval: 30 sec; Timeout: 15 sec
+. 2014-03-01 05:10:45.819 Proxy: none
+. 2014-03-01 05:10:45.819 FTP: FTPS: Explicit TLS; Passive: Yes [Force IP: A]; List all: A
+. 2014-03-01 05:10:45.819 Session reuse: Yes
+. 2014-03-01 05:10:45.819 Local directory: default, Remote directory: home, Update: Yes, Cache: Yes
+. 2014-03-01 05:10:45.819 Cache directory changes: Yes, Permanent: Yes
+. 2014-03-01 05:10:45.819 DST mode: 1; Timezone offset: 0h 0m
+. 2014-03-01 05:10:45.819 --------------------------------------------------------------------------
+. 2014-03-01 05:10:45.860 Connecting to ftp.excent.com ...
+. 2014-03-01 05:10:45.978 Connected with ftp.excent.com, negotiating SSL connection...
+< 2014-03-01 05:10:45.982 220-Welcome to Excent FTP.
+< 2014-03-01 05:10:45.982 220-
+< 2014-03-01 05:10:45.982 220 We monitor connections so please, no monkey business.
+> 2014-03-01 05:10:45.982 AUTH TLS
+< 2014-03-01 05:10:45.983 234 Using authentication type TLS
+. 2014-03-01 05:10:46.303 Using TLSv1, cipher TLSv1/SSLv3: AES256-SHA, 1024 bit RSA
+. 2014-03-01 05:10:46.303 SSL connection established. Waiting for welcome message...
+> 2014-03-01 05:10:46.303 USER pickens
+< 2014-03-01 05:10:46.304 331 Password required for pickens
+> 2014-03-01 05:10:46.304 PASS *******
+< 2014-03-01 05:10:46.305 230 Logged on
+> 2014-03-01 05:10:46.305 SYST
+< 2014-03-01 05:10:46.305 215 UNIX emulated by FileZilla
+> 2014-03-01 05:10:46.305 FEAT
+< 2014-03-01 05:10:46.306 211-Features:
+< 2014-03-01 05:10:46.306  MDTM
+< 2014-03-01 05:10:46.306  REST STREAM
+< 2014-03-01 05:10:46.306  SIZE
+< 2014-03-01 05:10:46.306  MLST type*;size*;modify*;
+< 2014-03-01 05:10:46.307  MLSD
+< 2014-03-01 05:10:46.307  AUTH SSL
+< 2014-03-01 05:10:46.307  AUTH TLS
+< 2014-03-01 05:10:46.307  PROT
+< 2014-03-01 05:10:46.307  PBSZ
+< 2014-03-01 05:10:46.307  UTF8
+< 2014-03-01 05:10:46.307  CLNT
+< 2014-03-01 05:10:46.307  MFMT
+< 2014-03-01 05:10:46.307 211 End
+> 2014-03-01 05:10:46.307 PBSZ 0
+< 2014-03-01 05:10:46.308 200 PBSZ=0
+> 2014-03-01 05:10:46.308 PROT P
+< 2014-03-01 05:10:46.308 200 Protection level set to P
+. 2014-03-01 05:10:46.308 Connected
+. 2014-03-01 05:10:46.313 --------------------------------------------------------------------------
+. 2014-03-01 05:10:46.313 Using FTP protocol.
+. 2014-03-01 05:10:46.314 Doing startup conversation with host.
+> 2014-03-01 05:10:46.314 PWD
+< 2014-03-01 05:10:46.315 257 "/" is current directory.
+. 2014-03-01 05:10:46.316 Getting current directory name.
+. 2014-03-01 05:10:46.316 Startup conversation with host finished.
+< 2014-03-01 05:10:46.316 Script: Active session: [1] pickens@ftp.excent.com
+> 2014-03-01 05:10:46.316 Script: option transfer binary
+< 2014-03-01 05:10:46.316 Script: transfer        binary    
+> 2014-03-01 05:10:46.316 Script: lcd "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens"
+< 2014-03-01 05:10:46.316 Script: E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens
+> 2014-03-01 05:10:46.316 Script: cd /
+. 2014-03-01 05:10:46.316 Cached directory change via "/" to "/".
+. 2014-03-01 05:10:46.316 Getting current directory name.
+< 2014-03-01 05:10:46.316 Script: /
+> 2014-03-01 05:10:46.316 Script: put "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls"
+. 2014-03-01 05:10:46.317 Copying 1 files/directories to remote directory "/"
+. 2014-03-01 05:10:46.317   PrTime: Yes; PrRO: No; Rght: rw-r--r--; PrR: No (No); FnCs: N; RIC: 0100; Resume: S (102400); CalcS: No; Mask: 
+. 2014-03-01 05:10:46.317   TM: B; ClAr: No; CPS: 0; InclM: 
+. 2014-03-01 05:10:46.317   AscM: *.*html; *.htm; *.txt; *.php; *.php3; *.cgi; *.c; *.cpp; *.h; *.pas; *.bas; *.tex; *.pl; *.js; .htaccess; *.xtml; *.css; *.cfg; *.ini; *.sh; *.xml
+. 2014-03-01 05:10:46.317 File: "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls"
+. 2014-03-01 05:10:46.325 Copying "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls" to remote directory started.
+. 2014-03-01 05:10:46.326 Binary transfer mode selected.
+. 2014-03-01 05:10:46.326 Starting upload of E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls
+> 2014-03-01 05:10:46.333 TYPE A
+< 2014-03-01 05:10:46.333 200 Type set to A
+> 2014-03-01 05:10:46.333 PASV
+< 2014-03-01 05:10:46.334 227 Entering Passive Mode (10,0,1,27,199,6)
+> 2014-03-01 05:10:46.341 MLSD
+< 2014-03-01 05:10:46.343 150 Connection accepted
+. 2014-03-01 05:10:46.343 SSL connection established
+< 2014-03-01 05:10:46.345 226 Transfer OK
+. 2014-03-01 05:10:46.345 type=dir;modify=20140211064224; DbBackups
+. 2014-03-01 05:10:46.345 type=file;modify=20140228121225;size=691712; ValidationReport_Detail.xls
+> 2014-03-01 05:10:46.351 TYPE I
+< 2014-03-01 05:10:46.352 200 Type set to I
+> 2014-03-01 05:10:46.352 PASV
+< 2014-03-01 05:10:46.353 227 Entering Passive Mode (10,0,1,27,199,7)
+> 2014-03-01 05:10:46.353 STOR ValidationReport_Detail.xls
+< 2014-03-01 05:10:46.355 150 Connection accepted
+. 2014-03-01 05:10:46.366 SSL connection established
+< 2014-03-01 05:10:46.430 226 Transfer OK
+> 2014-03-01 05:10:46.430 MFMT 20140301121043 ValidationReport_Detail.xls
+< 2014-03-01 05:10:46.431 213 modify=20140301121043; /ValidationReport_Detail.xls
+. 2014-03-01 05:10:46.431 Upload successful
+> 2014-03-01 05:10:46.431 Script: close
+. 2014-03-01 05:10:46.432 Disconnected from server
+. 2014-03-03 05:40:48.595 --------------------------------------------------------------------------
+. 2014-03-03 05:40:48.597 WinSCP Version 5.1.7 (Build 3446) (OS 6.1.7601 Service Pack 1)
+. 2014-03-03 05:40:48.597 Configuration: C:\Program Files (x86)\WinSCP\WinSCP.ini
+. 2014-03-03 05:40:48.598 Local account: RENEGADE\muthuv
+. 2014-03-03 05:40:48.598 Working directory: C:\Program Files (x86)\WinSCP
+. 2014-03-03 05:40:48.598 Process ID: 6968
+. 2014-03-03 05:40:48.598 Command-line: "C:\Program Files (x86)\WinSCP\WinSCP.exe" -script="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Upload_FTP.txt" /log="E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\log_ftp.txt"
+. 2014-03-03 05:40:48.598 Time zone: Current: GMT-7, Standard: GMT-7, DST: GMT-6, DST Start: 3/9/2014, DST End: 11/2/2014
+. 2014-03-03 05:40:48.598 Login time: Monday, March 03, 2014 5:40:48 AM
+. 2014-03-03 05:40:48.598 --------------------------------------------------------------------------
+. 2014-03-03 05:40:48.598 Session name: pickens@ftp.excent.com (Ad-Hoc session)
+. 2014-03-03 05:40:48.598 Host name: ftp.excent.com (Port: 21)
+. 2014-03-03 05:40:48.598 User name: pickens (Password: Yes, Key file: No)
+. 2014-03-03 05:40:48.598 Tunnel: No
+. 2014-03-03 05:40:48.598 Transfer Protocol: FTP
+. 2014-03-03 05:40:48.598 Ping type: C, Ping interval: 30 sec; Timeout: 15 sec
+. 2014-03-03 05:40:48.598 Proxy: none
+. 2014-03-03 05:40:48.598 FTP: FTPS: Explicit TLS; Passive: Yes [Force IP: A]; List all: A
+. 2014-03-03 05:40:48.598 Session reuse: Yes
+. 2014-03-03 05:40:48.598 Local directory: default, Remote directory: home, Update: Yes, Cache: Yes
+. 2014-03-03 05:40:48.598 Cache directory changes: Yes, Permanent: Yes
+. 2014-03-03 05:40:48.598 DST mode: 1; Timezone offset: 0h 0m
+. 2014-03-03 05:40:48.598 --------------------------------------------------------------------------
+. 2014-03-03 05:40:48.614 Connecting to ftp.excent.com ...
+. 2014-03-03 05:40:48.625 Connected with ftp.excent.com, negotiating SSL connection...
+< 2014-03-03 05:40:48.625 220-Welcome to Excent FTP.
+< 2014-03-03 05:40:48.625 220-
+< 2014-03-03 05:40:48.625 220 We monitor connections so please, no monkey business.
+> 2014-03-03 05:40:48.625 AUTH TLS
+< 2014-03-03 05:40:48.626 234 Using authentication type TLS
+. 2014-03-03 05:40:48.975 Using TLSv1, cipher TLSv1/SSLv3: AES256-SHA, 1024 bit RSA
+. 2014-03-03 05:40:48.975 SSL connection established. Waiting for welcome message...
+> 2014-03-03 05:40:48.975 USER pickens
+< 2014-03-03 05:40:48.975 331 Password required for pickens
+> 2014-03-03 05:40:48.975 PASS *******
+< 2014-03-03 05:40:48.977 230 Logged on
+> 2014-03-03 05:40:48.977 SYST
+< 2014-03-03 05:40:48.977 215 UNIX emulated by FileZilla
+> 2014-03-03 05:40:48.977 FEAT
+< 2014-03-03 05:40:48.979 211-Features:
+< 2014-03-03 05:40:48.979  MDTM
+< 2014-03-03 05:40:48.979  REST STREAM
+< 2014-03-03 05:40:48.979  SIZE
+< 2014-03-03 05:40:48.979  MLST type*;size*;modify*;
+< 2014-03-03 05:40:48.980  MLSD
+< 2014-03-03 05:40:48.980  AUTH SSL
+< 2014-03-03 05:40:48.980  AUTH TLS
+< 2014-03-03 05:40:48.980  PROT
+< 2014-03-03 05:40:48.980  PBSZ
+< 2014-03-03 05:40:48.980  UTF8
+< 2014-03-03 05:40:48.980  CLNT
+< 2014-03-03 05:40:48.980  MFMT
+< 2014-03-03 05:40:48.980 211 End
+> 2014-03-03 05:40:48.980 PBSZ 0
+< 2014-03-03 05:40:48.981 200 PBSZ=0
+> 2014-03-03 05:40:48.981 PROT P
+< 2014-03-03 05:40:48.982 200 Protection level set to P
+. 2014-03-03 05:40:48.982 Connected
+. 2014-03-03 05:40:48.982 --------------------------------------------------------------------------
+. 2014-03-03 05:40:48.989 Using FTP protocol.
+. 2014-03-03 05:40:48.989 Doing startup conversation with host.
+> 2014-03-03 05:40:48.989 PWD
+< 2014-03-03 05:40:48.990 257 "/" is current directory.
+. 2014-03-03 05:40:48.991 Getting current directory name.
+. 2014-03-03 05:40:48.991 Startup conversation with host finished.
+< 2014-03-03 05:40:48.991 Script: Active session: [1] pickens@ftp.excent.com
+> 2014-03-03 05:40:48.991 Script: option transfer binary
+< 2014-03-03 05:40:48.991 Script: transfer        binary    
+> 2014-03-03 05:40:48.991 Script: lcd "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens"
+< 2014-03-03 05:40:48.991 Script: E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens
+> 2014-03-03 05:40:48.991 Script: cd /
+. 2014-03-03 05:40:48.991 Cached directory change via "/" to "/".
+. 2014-03-03 05:40:48.991 Getting current directory name.
+< 2014-03-03 05:40:48.991 Script: /
+> 2014-03-03 05:40:48.991 Script: put "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls"
+. 2014-03-03 05:40:48.991 Copying 1 files/directories to remote directory "/"
+. 2014-03-03 05:40:48.991   PrTime: Yes; PrRO: No; Rght: rw-r--r--; PrR: No (No); FnCs: N; RIC: 0100; Resume: S (102400); CalcS: No; Mask: 
+. 2014-03-03 05:40:48.991   TM: B; ClAr: No; CPS: 0; InclM: 
+. 2014-03-03 05:40:48.991   AscM: *.*html; *.htm; *.txt; *.php; *.php3; *.cgi; *.c; *.cpp; *.h; *.pas; *.bas; *.tex; *.pl; *.js; .htaccess; *.xtml; *.css; *.cfg; *.ini; *.sh; *.xml
+. 2014-03-03 05:40:48.991 File: "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls"
+. 2014-03-03 05:40:48.992 Copying "E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls" to remote directory started.
+. 2014-03-03 05:40:48.992 Binary transfer mode selected.
+. 2014-03-03 05:40:48.992 Starting upload of E:\GIT\excent-to-enrich\SCDataconversion\Common\Localization\Pickens\ValidationReport_Detail.xls
+> 2014-03-03 05:40:48.993 TYPE A
+< 2014-03-03 05:40:48.993 200 Type set to A
+> 2014-03-03 05:40:48.993 PASV
+< 2014-03-03 05:40:48.994 227 Entering Passive Mode (10,0,1,27,199,20)
+> 2014-03-03 05:40:48.997 MLSD
+< 2014-03-03 05:40:49.005 150 Connection accepted
+. 2014-03-03 05:40:49.005 SSL connection established
+< 2014-03-03 05:40:49.007 226 Transfer OK
+. 2014-03-03 05:40:49.007 type=dir;modify=20140211064224; DbBackups
+. 2014-03-03 05:40:49.007 type=file;modify=20140301121043;size=798208; ValidationReport_Detail.xls
+> 2014-03-03 05:40:49.014 TYPE I
+< 2014-03-03 05:40:49.015 200 Type set to I
+> 2014-03-03 05:40:49.015 PASV
+< 2014-03-03 05:40:49.016 227 Entering Passive Mode (10,0,1,27,199,21)
+> 2014-03-03 05:40:49.016 STOR ValidationReport_Detail.xls
+< 2014-03-03 05:40:49.018 150 Connection accepted
+. 2014-03-03 05:40:49.029 SSL connection established
+< 2014-03-03 05:40:49.103 226 Transfer OK
+> 2014-03-03 05:40:49.103 MFMT 20140303124047 ValidationReport_Detail.xls
+< 2014-03-03 05:40:49.104 213 modify=20140303124047; /ValidationReport_Detail.xls
+. 2014-03-03 05:40:49.104 Upload successful
+> 2014-03-03 05:40:49.104 Script: close
+. 2014-03-03 05:40:49.105 Disconnected from server
